# sandbox

./: .gitignore  README.md
LearningReact/react-tutorial/: package-lock.json
Markdown_pg/: playground.md
PythonPackaging/: README.md
PythonPackaging/packaging_tutorial/: README.md  pyproject.toml
PythonPackaging/packaging_tutorial/src/example_package_epaphrodytus.egg-info/: SOURCES.txt  top_level.txt
PythonQuirks/: README.md  data_structures.ipynb  features.ipynb  pattern_matching.ipynb
PythonQuirks/python_downloading/: stats_page.html
Python_OOP/Notebooks/: concepts.ipynb  creational.ipynb
WebApp_py/flask-tutorial/: README.md
WebApp_py/flask-tutorial/flaskr/: __init__.py  auth.py  blog.py  db.py
WebApp_py/flask-tutorial/flaskr/templates/: base.html
WebApp_py/flask-tutorial/flaskr/templates/auth/: register.html
